@@ -7,6 +7,8 @@ OpenDNSSEC 1.3.14rc1
 * OPENDNSSEC-91: Make the keytype flag required when rolling keys
 
 Bugfixes:
+* OPENDNSSEC-247: Signer Engine: TTL on NSEC3 was not updated on SOA
+  Minimum change.
 * OPENDNSSEC-396: Use TTLs from kasp when generating DNSKEY and DS records for
   output.
 * OPENDNSSEC-398: The ods-ksmutil key rollover command does not work correctly
